{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 11,
  "lineage": "c795205b-ccf9-32f0-5b17-c5684e9efce1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "this1nateip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cd7deb282b6d25f",
            "arn": "arn:aws:ec2:ap-south-1:605134434853:elastic-ip/eipalloc-09cd7deb282b6d25f",
            "domain": "vpc",
            "id": "eipalloc-09cd7deb282b6d25f",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-200-211-91.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.200.211.91",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "hsit-use1-stage-nat-eip"
            },
            "tags_all": {
              "Name": "hsit-use1-stage-nat-eip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this1igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134434853:internet-gateway/igw-02c3db3256118fba0",
            "id": "igw-02c3db3256118fba0",
            "owner_id": "605134434853",
            "region": "ap-south-1",
            "tags": {
              "Name": "hsit-use1-stage-igw"
            },
            "tags_all": {
              "Name": "hsit-use1-stage-igw"
            },
            "vpc_id": "vpc-07528867f70f02cb6"
          },
          "dependencies": [
            "aws_vpc.this1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this1nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09cd7deb282b6d25f",
            "association_id": "eipassoc-039488c38d951f19b",
            "connectivity_type": "public",
            "id": "nat-083836da4d5cc9075",
            "network_interface_id": "eni-05c8323fdfd517279",
            "private_ip": "10.10.1.142",
            "public_ip": "13.200.211.91",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d35806afc86f8a36",
            "tags": {
              "Name": "hsit-use1-stage-nat"
            },
            "tags_all": {
              "Name": "hsit-use1-stage-nat"
            }
          },
          "dependencies": [
            "aws_eip.this1nateip",
            "aws_subnet.this1publicsubnet",
            "aws_vpc.this1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this1privrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134434853:route-table/rtb-09ec3a44a37215ede",
            "id": "rtb-09ec3a44a37215ede",
            "owner_id": "605134434853",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-083836da4d5cc9075",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hsit-use1-stage-privatert"
            },
            "tags_all": {
              "Name": "hsit-use1-stage-privatert"
            },
            "timeouts": null,
            "vpc_id": "vpc-07528867f70f02cb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.this1nateip",
            "aws_nat_gateway.this1nat",
            "aws_subnet.this1publicsubnet",
            "aws_vpc.this1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this1pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134434853:route-table/rtb-08c8c2bb0be69f765",
            "id": "rtb-08c8c2bb0be69f765",
            "owner_id": "605134434853",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02c3db3256118fba0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hsit-use1-stage-publicrt"
            },
            "tags_all": {
              "Name": "hsit-use1-stage-publicrt"
            },
            "timeouts": null,
            "vpc_id": "vpc-07528867f70f02cb6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.this1igw",
            "aws_vpc.this1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assosiationprivate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3122ffc63e1fb7d",
            "region": "ap-south-1",
            "route_table_id": "rtb-09ec3a44a37215ede",
            "subnet_id": "subnet-06cb53c97a511f624"
          },
          "dependencies": [
            "aws_eip.this1nateip",
            "aws_nat_gateway.this1nat",
            "aws_route_table.this1privrt",
            "aws_subnet.this1privatesubnet",
            "aws_subnet.this1publicsubnet",
            "aws_vpc.this1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "assosiationpublic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da8f399d67792ebd",
            "region": "ap-south-1",
            "route_table_id": "rtb-08c8c2bb0be69f765",
            "subnet_id": "subnet-0d35806afc86f8a36"
          },
          "dependencies": [
            "aws_internet_gateway.this1igw",
            "aws_route_table.this1pubrt",
            "aws_subnet.this1publicsubnet",
            "aws_vpc.this1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this1privatesubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134434853:subnet/subnet-06cb53c97a511f624",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06cb53c97a511f624",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "605134434853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hsit-use1-stage-priv-subnet1"
            },
            "tags_all": {
              "Name": "hsit-use1-stage-priv-subnet1"
            },
            "vpc_id": "vpc-07528867f70f02cb6"
          },
          "dependencies": [
            "aws_vpc.this1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this1publicsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134434853:subnet/subnet-0d35806afc86f8a36",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d35806afc86f8a36",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "605134434853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "hsit-use1-stage-pub-subnet1"
            },
            "tags_all": {
              "Name": "hsit-use1-stage-pub-subnet1"
            },
            "vpc_id": "vpc-07528867f70f02cb6"
          },
          "dependencies": [
            "aws_vpc.this1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:605134434853:vpc/vpc-07528867f70f02cb6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0f409163aa39d31ef",
            "default_route_table_id": "rtb-05c6776f5f92e9ca8",
            "default_security_group_id": "sg-0bd2985d8f56955ad",
            "dhcp_options_id": "dopt-07aec712daa2a2cd4",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07528867f70f02cb6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05c6776f5f92e9ca8",
            "owner_id": "605134434853",
            "region": "ap-south-1",
            "tags": {
              "Name": "hsit-use1-stage-vpc"
            },
            "tags_all": {
              "Name": "hsit-use1-stage-vpc"
            }
          }
        }
      ]
    }
  ]
}